# Ray-Tracer

./: CMakeLists.txt  Makefile  README  cmake_install.cmake
inputFiles/: cool.txt  fourSpheres.txt  oneSphere.txt  planeTest.txt  singlePlane.txt  singleSphere.txt  singleTriangle.txt  threeSpheres.txt
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Main.cpp  Main.hpp  Makefile  PPM.cpp  PPM.hpp  World.cpp  World.hpp  cmake_install.cmake
src/geometry/: CMakeLists.txt  GeometricObject.cpp  GeometricObject.hpp  Makefile  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  cmake_install.cmake
src/lights/: Ambient.cpp  Ambient.hpp  CMakeLists.txt  Light.cpp  Light.hpp  Makefile  PointLight.cpp  PointLight.hpp  cmake_install.cmake
src/materials/: CMakeLists.txt  Lambertian.cpp  Lambertian.hpp  Makefile  Material.cpp  Material.hpp  cmake_install.cmake
src/tracers/: CMakeLists.txt  Makefile  Multi.cpp  Multi.hpp  RayCast.cpp  RayCast.hpp  Tracer.cpp  Tracer.hpp  cmake_install.cmake
src/tracers/oldTracers/: SinglePlane.cpp  SinglePlane.hpp  SingleSphere.cpp  SingleSphere.hpp  SingleTriangle.cpp  SingleTriangle.hpp
src/utils/: CMakeLists.txt  Makefile  Normal.cpp  Normal.hpp  Point3D.cpp  Point3D.hpp  RGB.cpp  RGB.hpp  Ray.cpp  Ray.hpp  Shade.cpp  Shade.hpp  Vector3D.cpp  Vector3D.hpp  cmake_install.cmake
