CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(rayTracer)

SET(CMAKE_CXX_FLAGS "-pedantic -Wall")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BIINARY_DIR}/lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(SRC_DIR "${CMAKE_SOURCE_DIR}/src")

ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(tracers)
ADD_SUBDIRECTORY(lights)
ADD_SUBDIRECTORY(materials)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}
	${SRC_DIR}
)

FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.hpp)

ADD_LIBRARY(common ${SRCS} ${HDRS})

ADD_EXECUTABLE(rayTracer Main.cpp)

TARGET_LINK_LIBRARIES(
	rayTracer
	common
	geometry
	utils
	tracers
	lights
	materials
)
